[gd_scene load_steps=38 format=2]

[ext_resource path="res://Actors/Rex/Rex.gd" type="Script" id=1]
[ext_resource path="res://Actors/Rex/Rex sprite sheet.png" type="Texture" id=2]
[ext_resource path="res://Audio/Sounds/Salto.wav" type="AudioStream" id=3]
[ext_resource path="res://Actors/Common/Sprites/Shadow.png" type="Texture" id=4]
[ext_resource path="res://Actors/Rex/DustParticles/dust.png" type="Texture" id=5]

[sub_resource type="Animation" id=22]
resource_name = "Die"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=32]
resource_name = "Duck"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Fall"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=23]
resource_name = "Idle"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Jump"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 9, 10 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=10]
resource_name = "OnFloor"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 12, 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:region_rect")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 4, 8, 88, 88 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("JumpSound:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "Walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "Die"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "Duck"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Fall"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Jump"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "OnFloor"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachine" id=20]
states/Die/node = SubResource( 24 )
states/Die/position = Vector2( 506.983, 110.374 )
states/Duck/node = SubResource( 33 )
states/Duck/position = Vector2( 295.741, 248.248 )
states/Fall/node = SubResource( 12 )
states/Fall/position = Vector2( 689.667, 109.37 )
states/Idle/node = SubResource( 25 )
states/Idle/position = Vector2( 104.333, 128.167 )
states/Jump/node = SubResource( 13 )
states/Jump/position = Vector2( 505.321, 21.6667 )
states/OnFloor/node = SubResource( 14 )
states/OnFloor/position = Vector2( 509.184, 203.001 )
states/Walk/node = SubResource( 15 )
states/Walk/position = Vector2( 296.334, 111.056 )
transitions = [ "Walk", "Jump", SubResource( 16 ), "Jump", "Fall", SubResource( 17 ), "Fall", "OnFloor", SubResource( 18 ), "OnFloor", "Walk", SubResource( 19 ), "Walk", "Die", SubResource( 27 ), "Jump", "Die", SubResource( 28 ), "Fall", "Die", SubResource( 29 ), "OnFloor", "Die", SubResource( 30 ), "Idle", "Walk", SubResource( 26 ), "OnFloor", "Idle", SubResource( 31 ), "Walk", "Duck", SubResource( 34 ), "Duck", "Walk", SubResource( 35 ), "OnFloor", "Duck", SubResource( 36 ) ]
start_node = "Idle"
end_node = "Die"
graph_offset = Vector2( 0, -70.4087 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=21]

[sub_resource type="Curve" id=38]
_data = [ Vector2( 0.274823, 0.301148 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=39]
offsets = PoolRealArray( 0.443548, 0.854839 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="Rex" type="KinematicBody2D"]
z_index = 1
collision_mask = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 46.0 ]
}

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( -10, 46 )
z_index = -1
z_as_relative = false
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 17
region_rect = Rect2( 4, 8, 88, 88 )

[node name="NormalCollider" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -26, 46, 6, 46, 6, 26, 14, 18, 14, -2, 38, -18, 38, -30, 34, -34, 3, -34, -2, -30, -2, -9, -26, 2 )

[node name="DuckCollider" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -26, 46, -14, 46, -14, 30, 5, 30, 14, 26, 50, 26, 50, -2, -42, -2, -54, -6, -54, 4, -26, 34 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 22 )
anims/Duck = SubResource( 32 )
anims/Fall = SubResource( 9 )
anims/Idle = SubResource( 23 )
anims/Jump = SubResource( 8 )
anims/OnFloor = SubResource( 10 )
anims/RESET = SubResource( 11 )
anims/Walk = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 20 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 21 )

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Sounds"

[node name="DustParticles" type="CPUParticles2D" parent="."]
position = Vector2( -26, 41 )
emitting = false
amount = 3
lifetime = 0.5
local_coords = false
texture = ExtResource( 5 )
direction = Vector2( -1, 0 )
spread = 19.29
gravity = Vector2( 0, 0 )
initial_velocity = 90.91
angle = 56.1
angle_random = 1.0
scale_amount_curve = SubResource( 38 )
color_ramp = SubResource( 39 )
